// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`agent-aragon-voting e2e tests should process block with changed outcome 1`] = `
Finding {
  "addresses": Array [],
  "alertId": "ARAGON-VOTE-OUTCOME-CHANGED",
  "description": "Expected aragon vote 152 outcome changed from 'Fail' to 'Pass' and there is less than 2 hour(s) left till the end of the first voting phase.",
  "labels": Array [],
  "metadata": Object {},
  "name": "⚠️ Expected vote outcome has changed",
  "protocol": "ethereum",
  "severity": 4,
  "type": 2,
}
`;

exports[`agent-aragon-voting e2e tests should process tx with executed vote 1`] = `
Finding {
  "addresses": Array [],
  "alertId": "ARAGON-VOTE-EXECUTED",
  "description": "Aragon vote 22 was executed",
  "labels": Array [],
  "metadata": Object {
    "args": "22",
  },
  "name": "✅ Aragon: Vote executed",
  "protocol": "ethereum",
  "severity": 1,
  "type": 4,
}
`;

exports[`agent-aragon-voting e2e tests should process tx with started vote 1`] = `
Finding {
  "addresses": Array [],
  "alertId": "ARAGON-VOTE-STARTED",
  "description": "Aragon vote 30 was started by 0xf73a1260d222f447210581DDf212D915c09a3249
Details:
",
  "labels": Array [],
  "metadata": Object {
    "args": "30,0xf73a1260d222f447210581DDf212D915c09a3249,",
  },
  "name": "🚀 Aragon: Vote started",
  "protocol": "ethereum",
  "severity": 1,
  "type": 4,
}
`;
